src/test/ui/regions/regions-close-object-into-object-2.stderr
error[E0759]: cannot infer an appropriate lifetime
  --> $DIR/regions-close-object-into-object-2.rs:10:11
   |
LL | fn g<'a, T: 'static>(v: Box<dyn A<T> + 'a>) -> Box<dyn X + 'static> {
   |                         ------------------ this data with lifetime `'a`...
LL |     box B(&*v) as Box<dyn X>
   |           ^^^ ...is captured here, requiring it to live as long as `'static`
   |
help: consider changing the trait object's explicit `'static` bound to the lifetime of argument `v`
   |
LL | fn g<'a, T: 'static>(v: Box<dyn A<T> + 'a>) -> Box<dyn X + 'a> {
   |                                                            ^^
help: alternatively, add an explicit `'static` bound to this reference
   |
LL | fn g<'a, T: 'static>(v: std::boxed::Box<(dyn A<T> + 'static)>) -> Box<dyn X + 'static> {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0759`.
